--- a/public/css/memos.css
+++ b/public/css/memos.css
@@ -112,20 +112,10 @@ header {
     text-decoration: underline;
 }
 
-
-
-blockquote {
-    margin: 1em 0;
-    padding: 0 1em;
-    color: var(--color-fg-muted);
-    border-left: 0.25em solid var(--color-border-default);
-} */
-/* 
-
-
 .theme-toggle {
     cursor: pointer;
-}*/
+}
+*/
 
 #main {
     color: var(--color-main);
@@ -144,7 +134,37 @@ h2 {
     border-bottom: 1px solid var(--color-border-muted);
 }
 
-.total {
+.memos h1 {
+    font-weight: 600;
+    line-height: 1.25;
+    margin: .67em 0;
+    font-size: 2em;
+    border-bottom: 1px solid var(--color-border-muted);
+}
+
+.memos h2 {
+    font-weight: 600;
+    line-height: 1.25;
+    margin: .67em 0;
+    font-size: 1.75em;
+    border-bottom: 1px solid var(--color-border-muted);
+}
+
+.memos h3 {
+    font-weight: 600;
+    line-height: 1.1;
+    margin: .67em 0;
+    font-size: 1.5em;
+}
+
+.memos h4 {
+    font-weight: 600;
+    line-height: 1.1;
+    margin: .67em 0;
+    font-size: 1.2em;
+}
+
+.memos .total {
     text-align: left;
 } 
 
@@ -226,8 +246,31 @@ h2 {
     margin-left: 0.1rem;
 }
 
-.memos__text ul li {
-    list-style: none;
+.memos__text p {
+    margin-top:1em;
+}
+
+.memos__text p:empty {
+    margin-top: 0;
+}
+
+.memos__text blockquote {
+    margin: 0.5em 0;
+    padding: 0 0.5em;
+    color: var(--color-fg-muted);
+    border-left: 0.25em solid var(--color-border-default);
+} 
+
+.memos__text ul {
+    list-style-type: disc; /* 设置无序列表的黑点样式 */
+}
+
+.memos__text ol {
+    list-style-type: decimal; /* 设置有序列表的数字样式 */
+}
+
+.memos__text li {
+    margin-left: 20px;
 }
 
 .memos__text i {
@@ -257,6 +300,7 @@ h2 {
     padding: 0.75rem;
     overflow-wrap: break-word;
     word-break: break-all;
+    white-space: pre-wrap; 
 }
 
 .memos__text code {
@@ -268,6 +312,7 @@ h2 {
     font-family: ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,monospace;
     font-size: .875rem;
     line-height: 1.5rem;
+    overflow-wrap: break-word;
 }
 
 .memos__text pre code {
@@ -336,6 +381,7 @@ h2 {
     width: 100%;
     grid-template-columns: repeat(2,minmax(0,1fr));
     gap: 0.5rem;
+    align-items:start;
 }
 
 @media (min-width: 640px) {
@@ -353,7 +399,7 @@ h2 {
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),var(--tw-ring-shadow, 0 0 #0000),var(--tw-shadow);
     -ms-overflow-style: none;
     scrollbar-width: none;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .timeline img, .resimg img {
